--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,8 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 240, 3.5%, 11.4%;
+    --drawer: 240, 2%, 16%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
