--- a/app/globals.css
+++ b/app/globals.css
@@ -107,7 +107,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-white text-foreground;
   }
 }
 
