--- a/app/globals.css
+++ b/app/globals.css
@@ -18,16 +18,17 @@
 
 @layer base {
   :root {
-    --background: 240, 3.5%, 11.4%;
-    /* --drawer: 240, 2%, 16%; */
-    --drawer: 0 0% 10%;
+    --background: 270 4% 11%;
+    --drawer: 270, 3%, 16%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 3 90% 80%;
     --primary-foreground: 0 0% 98%;
+    /* --primary: 0 0% 9%;
+    --primary-foreground: 0 0% 98%; */
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
@@ -62,14 +63,17 @@
   }
 
   .dark {
-    --background: 0 0% 3.9%;
+    --background: blue;
+    --drawer: 0 0% 6%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --primary: 330 81% 60%;
     --primary-foreground: 0 0% 9%;
+    /* --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%; */
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
